<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity2">

    <TextView
        android:id="@+id/ivinicio_"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:text="@string/inicio"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <ImageView
        android:id="@+id/ivhawi"
        android:layout_width="229dp"
        android:layout_height="292dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/hawi" />

    <Button
        android:id="@+id/btndos"
        android:layout_width="238dp"
        android:layout_height="109dp"
        android:drawableEnd="@drawable/btn_color"
        android:drawableBottom="@drawable/btn_color"
        android:radius="10dp"
        android:text="@string/Staff"
        app:icon="@drawable/staff"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522"
        app:rippleColor="#7DB63A" />

    <Button
        android:id="@+id/btnuno"
        android:layout_width="241dp"
        android:layout_height="99dp"
        android:drawableEnd="@drawable/btn_color"
        android:drawableBottom="@drawable/btn_color"
        android:text="@string/Students"
        app:icon="@drawable/estudiantesicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        app:rippleColor="#7DB63A" />

</androidx.constraintlayout.widget.ConstraintLayout>